--- a/styles/calendar-ho.css
+++ b/styles/calendar-ho.css
@@ -2,7 +2,7 @@
 
 div.calendar { position: relative; z-index:100; }
 
-.calendar, .calendar table {
+.DynarchCalendar, .DynarchCalendar table {
   border: 1px solid #6dd0f7;
   font-size: 11px;
   color: #000;
@@ -11,29 +11,29 @@ div.calendar { position: relative; z-index:100; }
   font-family: Arial, Helvetica, sans-serif;;
 }
 
-.calendar table {
+.DynarchCalendar table {
   border: 0 none;
 }
 
 /* Header part -- contains navigation buttons and day names. */
 
-.calendar .button { /* "<<", "<", ">", ">>" buttons have this class */
+.DynarchCalendar .button { /* "<<", "<", ">", ">>" buttons have this class */
   text-align: center;    /* They are the navigation buttons */
   padding: 2px;          /* Make the buttons seem like they're pressing */
   background: #6dd0f7;
 }
 
-.calendar .nav {
+.DynarchCalendar .nav {
 /*  background: #6dd0f7 url(menuarrow.gif) no-repeat 100% 100%;*/
 	background: #6dd0f7;
 }
 
-.calendar thead tr {
+.DynarchCalendar thead tr {
 	vertical-align:top;
 	height:20px;
 }
 
-.calendar thead .title { /* This holds the current "month, year" */
+.DynarchCalendar thead .title { /* This holds the current "month, year" */
   font-weight: normal;      /* Pressing it will take you to the current date */
   font-size:12px;
   line-height:12px;
@@ -43,16 +43,16 @@ div.calendar { position: relative; z-index:100; }
   padding: 2px;
 }
 
-.calendar thead .headrow { /* Row <TR> containing navigation buttons */
+.DynarchCalendar thead .headrow { /* Row <TR> containing navigation buttons */
   background: #6dd0f7;
   color: #000;
 }
 
-.calendar thead .daynames { /* Row <TR> containing the day names */
+.DynarchCalendar thead .daynames { /* Row <TR> containing the day names */
   background: #fff;
 }
 
-.calendar thead .name { /* Cells <TD> containing the day names */
+.DynarchCalendar thead .name { /* Cells <TD> containing the day names */
 /*  border-bottom: 1px solid #556;*/
   padding: 2px;
   text-align:center;
@@ -60,11 +60,11 @@ div.calendar { position: relative; z-index:100; }
   color: #000;
 }
 
-.calendar thead .weekend { /* How a weekend day name shows in header */
+.DynarchCalendar thead .weekend { /* How a weekend day name shows in header */
   background:#f2f2f2;
 }
 
-.calendar thead .hilite { /* How do the buttons in header appear when hover */
+.DynarchCalendar thead .hilite { /* How do the buttons in header appear when hover */
   background-color: #b4e5f9;
   color: #000;
   border: 1px solid;
@@ -72,60 +72,60 @@ div.calendar { position: relative; z-index:100; }
   padding: 1px;
 }
 
-.calendar thead .active { /* Active (pressed) buttons in header */
+.DynarchCalendar thead .active { /* Active (pressed) buttons in header */
   background-color: #b4e5f9;
   padding: 2px 0px 0px 2px;
 }
 
 /* The body part -- contains all the days in month. */
 
-.calendar tbody .day { /* Cells <TD> containing month days dates */
+.DynarchCalendar tbody .day { /* Cells <TD> containing month days dates */
   width: 1.5em;
   color: #000;
   background:#fff;
   text-align: right;
-/* ! 
+/* !
   padding: 2px 4px 2px 2px;
 */
   padding: 2px 4px 2px 2px;
 }
-.calendar tbody .day.othermonth {
+.DynarchCalendar tbody .day.othermonth {
   color: #666;
 }
-.calendar tbody .day.othermonth.oweekend {
+.DynarchCalendar tbody .day.othermonth.oweekend {
   color: #666;
   background-color: #f2f2f2;
 }
-.calendar tbody .day.othermonth.disabled {
+.DynarchCalendar tbody .day.othermonth.disabled {
   color: #aaa;
 }
 
-.calendar table .wn {
+.DynarchCalendar table .wn {
   padding: 2px 3px 2px 2px;
   border-right: 1px solid #000;
   background: #6dd0f7;
 }
 
-.calendar tbody .rowhilite td {
+.DynarchCalendar tbody .rowhilite td {
 /*  background: #b4e5f9;*/
 }
 
-.calendar tbody .rowhilite td.wn {
+.DynarchCalendar tbody .rowhilite td.wn {
   background: #6dd0f7;
 }
 
-.calendar tbody td.hilite { /* Hovered cells <TD> */
+.DynarchCalendar tbody td.hilite { /* Hovered cells <TD> */
   background: #b4e5f9!important;
   padding: 1px 3px 1px 1px;
   border: 1px solid #6dd0f7;
 }
 
-.calendar tbody td.active { /* Active (pressed) cells <TD> */
+.DynarchCalendar tbody td.active { /* Active (pressed) cells <TD> */
   background: #6dd0f7;
   padding: 2px 2px 0px 2px;
 }
 
-.calendar tbody td.selected { /* Cell showing today date */
+.DynarchCalendar tbody td.selected { /* Cell showing today date */
   font-weight: bold;
   border: 1px solid #000;
   padding: 1px 3px 1px 1px;
@@ -133,57 +133,57 @@ div.calendar { position: relative; z-index:100; }
   color: #000;
 }
 
-.calendar tbody td.weekend { /* Cells showing weekend days */
+.DynarchCalendar tbody td.weekend { /* Cells showing weekend days */
   color:#000;
   background: #f2f2f2;
 }
 
-.calendar tbody td.today { /* Cell showing selected date */
+.DynarchCalendar tbody td.today { /* Cell showing selected date */
   font-weight: bold;
   color:#0076a3;
 }
 
-.calendar tbody .disabled { color: #aaa; }
+.DynarchCalendar tbody .disabled { color: #aaa; }
 
-.calendar tbody .emptycell { /* Empty cells (the best is to hide them) */
+.DynarchCalendar tbody .emptycell { /* Empty cells (the best is to hide them) */
   visibility: hidden;
 }
 
-.calendar tbody .emptyrow { /* Empty row (some months need less than 6 rows) */
+.DynarchCalendar tbody .emptyrow { /* Empty row (some months need less than 6 rows) */
   display: none;
 }
 
 /* The footer part -- status bar and "Close" button */
 
-.calendar tfoot .footrow { /* The <TR> in footer (only one right now) */
+.DynarchCalendar tfoot .footrow { /* The <TR> in footer (only one right now) */
   display:none;
   text-align: center;
   background: #556;
   color: #fff;
 }
 
-.calendar tfoot .ttip { /* Tooltip (status bar) cell <TD> */
+.DynarchCalendar tfoot .ttip { /* Tooltip (status bar) cell <TD> */
   background: #fff;
   color: #0076a3;
   border-top: 1px solid #556;
   padding: 1px;
 }
 
-.calendar tfoot .hilite { /* Hover style for buttons in footer */
+.DynarchCalendar tfoot .hilite { /* Hover style for buttons in footer */
   background: #b4e5f9;
   border: 1px solid #04f;
   color: #000;
   padding: 1px;
 }
 
-.calendar tfoot .active { /* Active (pressed) style for buttons in footer */
+.DynarchCalendar tfoot .active { /* Active (pressed) style for buttons in footer */
   background: #b4e5f9;
   padding: 2px 0px 0px 2px;
 }
 
 /* Combo boxes (menus that display months/years for direct selection) */
 
-.calendar .combo {
+.DynarchCalendar .combo {
   position: absolute;
   display: none;
   top: 0px;
@@ -197,59 +197,59 @@ div.calendar { position: relative; z-index:100; }
   z-index: 100;
 }
 
-.calendar .combo .label,
-.calendar .combo .label-IEfix {
+.DynarchCalendar .combo .label,
+.DynarchCalendar .combo .label-IEfix {
   text-align: center;
   padding: 1px;
 }
 
-.calendar .combo .label-IEfix {
+.DynarchCalendar .combo .label-IEfix {
   width: 4em;
 }
 
-.calendar .combo .hilite {
+.DynarchCalendar .combo .hilite {
   background: #acf;
 }
 
-.calendar .combo .active {
+.DynarchCalendar .combo .active {
   border-top: 1px solid #46a;
   border-bottom: 1px solid #46a;
   background: #eef;
   font-weight: bold;
 }
 
-.calendar td.time {
+.DynarchCalendar td.time {
   border-top: 1px solid #000;
   padding: 1px 0px;
   text-align: center;
   background-color: #f4f0e8;
 }
 
-.calendar td.time .hour,
-.calendar td.time .minute,
-.calendar td.time .ampm {
+.DynarchCalendar td.time .hour,
+.DynarchCalendar td.time .minute,
+.DynarchCalendar td.time .ampm {
   padding: 0px 3px 0px 4px;
   border: 1px solid #889;
   font-weight: bold;
   background-color: #fff;
 }
 
-.calendar td.time .ampm {
+.DynarchCalendar td.time .ampm {
   text-align: center;
 }
 
-.calendar td.time .colon {
+.DynarchCalendar td.time .colon {
   padding: 0px 2px 0px 3px;
   font-weight: bold;
 }
 
-.calendar td.time span.hilite {
+.DynarchCalendar td.time span.hilite {
   border-color: #000;
   background-color: #667;
   color: #fff;
 }
 
-.calendar td.time span.active {
+.DynarchCalendar td.time span.active {
   border-color: #f00;
   background-color: #000;
   color: #0f0;
