Intermediate version with calculator

--- a/Layouts/layoutHotelCard.html
+++ b/Layouts/layoutHotelCard.html
@@ -8,8 +8,8 @@
 </div>
 
 <div id="sidebar">
-    <div id="orderblock" class="container">
-        <span id="calcHolder" class="template_emb"></span>
+    <div id="orderblock" class="container template_emb">
+        <!--<span id="calcHolder" class=""></span>-->
     </div>
     <div class="hr"></div>
     <span id="statistics" class="template_emb"></span>
